[workspace]
members = [
    "serio",
    "spansy",
    "uid-mux",
    "utils",
    "utils-aio",
    "utils/fuzz",
    "websocket-relay"]

[workspace.dependencies]
serio = { path = "serio" }
spansy = { path = "spansy" }
tlsn-utils = { path = "utils" }
tlsn-utils-aio = { path = "utils-aio" }
uid-mux = { path = "uid-mux" }

async-std = "1"
async-trait = "0.1"
async-tungstenite = "0.16"
bincode = "1.3"
bytes = "1"
cfg-if = "1"
futures = "0.3"
futures-channel = "0.3"
futures-core = "0.3"
futures-io = "0.3"
futures-sink = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"
prost = "0.9"
prost-build = "0.9"
rand = "0.8"
rayon = "1"
serde = "1"
thiserror = "1"
tokio = "1.23"
tokio-serde = "0.8"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"