[package]
name = "serio"
version = "0.1.0"
edition = "2021"

[features]
default = ["compat", "channel", "codec", "bincode"]
compat = ["dep:futures-sink"]
channel = ["dep:futures-channel"]
codec = ["dep:tokio-util", "dep:futures-io"]
bincode = ["dep:bincode"]

[dependencies]
bytes.workspace = true
serde.workspace = true
pin-project-lite.workspace = true
futures-core.workspace = true
futures-io = { workspace = true, optional = true }
futures-channel = { workspace = true, optional = true }
futures-sink = { workspace = true, optional = true }
futures-util = { workspace = true, features = ["bilock", "unstable"] }
tokio-util = { workspace = true, features = [
    "codec",
    "compat",
], optional = true }
bincode = { workspace = true, optional = true }

[dev-dependencies]
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec"] }

[[example]]
name = "tokio_codec"
path = "examples/tokio_codec.rs"
required-features = ["codec"]
