[package]
name = "spansy"
version = "0.1.0"
edition = "2021"
description = "Parsing with span information"
repository = "https://github.com/tlsnotary/tlsn-utils"
license = "MIT OR Apache-2.0"

[features]
default = []
serde = ["dep:serde", "bytes/serde"]

[dependencies]
tlsn-utils.workspace = true

bytes.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
thiserror.workspace = true

httparse = "1.8"
pest = { version = "2.7" }
pest_derive = { version = "2.7" }
