[package]
name = "websocket-relay"
version = "0.1.0"
edition = "2021"
authors = ["TLSNotary Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tlsnotary/tlsn-utils"
description = """A relay for websocket clients."""

[dependencies]
anyhow = "1"
form_urlencoded = "1.2"
futures = { workspace = true }
once_cell = "1.19"
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["url"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
